@@ -3,15 +3,11 @@ package com.techcourse.controller;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertAll;
 
-import java.io.BufferedReader;
-import java.io.ByteArrayInputStream;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.nio.charset.StandardCharsets;
 import org.apache.coyote.http11.request.HttpRequest;
 import org.apache.coyote.http11.response.HttpResponse;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import support.HttpRequestFixture;
 
 class FrontControllerTest {
 
@@ -21,15 +17,7 @@ class FrontControllerTest {
     @DisplayName("요청에 매핑 되어 있는 컨트롤러를 반환한다.")
     void requestMappedController() throws Exception {
         // given
-        final String requestString = String.join("\r\n",
-                "GET /login HTTP/1.1 ",
-                "Host: localhost:8080 ",
-                "Connection: keep-alive ",
-                "",
-                "");
-        final InputStream inputStream = new ByteArrayInputStream(requestString.getBytes());
-        final BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream, StandardCharsets.UTF_8));
-        final HttpRequest request = HttpRequest.from(reader);
+        final HttpRequest request = HttpRequestFixture.loginGet();
         final HttpResponse response = new HttpResponse();
 
         // when
@@ -38,9 +26,9 @@ class FrontControllerTest {
         // then
         assertAll(
                 () -> assertThat(response.getStatusLine()).isEqualTo("HTTP/1.1 200 OK "),
-                () -> assertThat(response.getHeaders().get(0).getHeaderAsString()).isEqualTo(
+                () -> assertThat(response.getHeaders().getFirst().getHeaderAsString()).isEqualTo(
                         "Content-Type: text/html;charset=utf-8 "),
-                () -> assertThat(response.getHeaders().get(1).getHeaderAsString()).isEqualTo("Content-Length: 3447 ")
+                () -> assertThat(response.getHeaders().getLast().getHeaderAsString()).isEqualTo("Content-Length: 3447 ")
         );
     }
 
@@ -48,15 +36,7 @@ class FrontControllerTest {
     @DisplayName("요청에 매핑 되어있지 않으면 정적 파일 컨트롤러를 반환한다.")
     void resourceController() throws Exception {
         // given
-        final String requestString = String.join("\r\n",
-                "GET /index.html HTTP/1.1 ",
-                "Host: localhost:8080 ",
-                "Connection: keep-alive ",
-                "",
-                "");
-        final InputStream inputStream = new ByteArrayInputStream(requestString.getBytes());
-        final BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream, StandardCharsets.UTF_8));
-        final HttpRequest request = HttpRequest.from(reader);
+        final HttpRequest request = HttpRequestFixture.indexPageGet();
         final HttpResponse response = new HttpResponse();
 
         // when
@@ -65,9 +45,9 @@ class FrontControllerTest {
         // then
         assertAll(
                 () -> assertThat(response.getStatusLine()).isEqualTo("HTTP/1.1 200 OK "),
-                () -> assertThat(response.getHeaders().get(0).getHeaderAsString()).isEqualTo(
+                () -> assertThat(response.getHeaders().getFirst().getHeaderAsString()).isEqualTo(
                         "Content-Type: text/html;charset=utf-8 "),
-                () -> assertThat(response.getHeaders().get(1).getHeaderAsString()).isEqualTo("Content-Length: 5564 ")
+                () -> assertThat(response.getHeaders().getLast().getHeaderAsString()).isEqualTo("Content-Length: 5564 ")
         );
     }
 }
